--- a/backend/package.json
+++ b/backend/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "description": "basic server for handling google oauth login",
   "main": "index.js",
-  "type" : "module",
+  "type": "module",
   "scripts": {
     "start": "nodemon",
-    "start:dev" : "node index.js",
-    "start:prod" : "node index.js",
+    "start:dev": "node index.js",
+    "start:prod": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anil Khadka",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mongoose": "^6.3.0"
+    "google-auth-library": "^7.14.1",
+    "helmet": "^5.0.2",
+    "mongoose": "^6.3.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.5.2"
   }
 }
