completed google login

--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -1,3 +1,4 @@
 GOOGLE_CLIENT_ID=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX.apps.googleusercontent.com
 PORT=8000
 MONGO_URI=clusterURIMONGODB
+JWT_SECRET=XXXXXXXXXXXXXSSSSSSSSSSSSSSSSSSSXXXXXXXXXXXXXXXXXXXXXX
