--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   "author": "Anil Khadka",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "google-auth-library": "^7.14.1",
     "helmet": "^5.0.2",
+    "http-status": "^1.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0",
-    "passport": "^0.5.2"
+    "unique-username-generator": "^1.0.1"
   }
 }
